Finishing creation sebha_tab.dart ui.

--- a/lib/l10n/app_ar.arb
+++ b/lib/l10n/app_ar.arb
@@ -2,5 +2,6 @@
   "islami": "اسلامي",
   "settings": "الاعدادات",
   "darkMode": "الوضع الليلي",
-  "suraName": "اسم السورة"
+  "suraName": "اسم السورة",
+  "counterOfSebha" : "عدد التسبيحات"
 }
